--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
             <img src="img\servicio-tecnico-oficial.jpg" alt="Descripción de la imagen 3" class="img3"/>
     
         </div>  
+        <div class="container greeting">
+          <h1>Gracias por su visita!</h1>
+        </div>
       </main>
   
   
